--- a/app/includes/products.html
+++ b/app/includes/products.html
@@ -71,4 +71,8 @@
             <img src="img/pendant_thumbnail.jpg" alt="">
             <p>Pendant Light — Подвесной светильник</p>
         </a>
+        <a href="/yilai-snow/" class="product">
+            <img src="img/snow_thumbnail.jpg" alt="">
+            <p>Yilai Snow Ceiling Light</p>
+        </a>
 </section>
