--- a/app/less/main.less
+++ b/app/less/main.less
@@ -3235,6 +3235,111 @@ footer {
     }
 }
 
+.yilai-snow{
+    margin-top: 80px;
+
+    &_content_1 {
+        margin: 0;
+        padding: 150px 0 150px;
+        background: linear-gradient(to bottom, #dedad7, #e8e7e5);
+
+        img {
+            max-width: 100%;
+        }
+
+        @media(max-width: 768px) {
+            padding: 100px 0;
+            background: #dedad7;
+            background-size: cover;
+        }
+
+        .text {
+            padding: 0 0 0 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 0;
+                text-align: center;
+            }
+        }
+    }
+
+    &_content_2 {
+        margin: 0;
+
+        .text {
+            padding: 10% 5% 10% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_3 {
+        margin: 0;
+        background: #cdcdcd;
+
+        .text {
+            padding: 10% 5% 10% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_7 {
+        margin: 0;
+        background: #7c7c7c;
+
+        .text {
+            padding: 15% 10% 10%;
+            color: @light-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5%;
+            }
+        }
+    }
+
+    &_content_8 {
+        margin: 0;
+        background: #eeeeee;
+
+        .text {
+            padding: 15% 5% 5% 10%;
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                padding: 10% 5% 0;
+            }
+        }
+    }
+
+    &_content_9 {
+        margin: 0;
+        padding: 100px 0 450px;
+        background: url('../img/snow_05.jpg') no-repeat top center;
+        background-size: cover;
+
+        @media(max-width: 768px) {
+            background-position: center right;
+        }
+
+        .text {
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                text-align: center;
+            }
+        }
+
+    }
+}
+
 .downlight {
     margin-top: 80px;
 
