--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -34,6 +34,9 @@
                                 <a href="/yilai-lotus/">Yilai&nbsp;Lotus&nbsp;Ceiling&nbsp;Light</a>
                             </li>
                             <li class="sub-menu-item">
+                                <a href="/yilai-snow/">Yilai&nbsp;Snow&nbsp;Ceiling&nbsp;Light</a>
+                            </li>
+                            <li class="sub-menu-item">
                                 <a href="/pendant/">Yeelight&nbsp;Pendant</a>
                             </li>
                             <li class="sub-menu-item">
@@ -104,6 +107,9 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/yilai-lotus/">Yilai&nbsp;Lotus&nbsp;Ceiling&nbsp;Light</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/yilai-snow/">Yilai&nbsp;Snow&nbsp;Ceiling&nbsp;Light</a>
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/pendant/">Yeelight&nbsp;Pendant</a>
