--- a/app/less/main.less
+++ b/app/less/main.less
@@ -3233,6 +3233,26 @@ footer {
             }
         }
     }
+
+    &_content_9 {
+        margin: 0;
+        padding: 100px 0 450px;
+        background: url('../img/lotus_07.jpg') no-repeat top center;
+        background-size: cover;
+
+        @media(max-width: 768px) {
+            background-position: center right;
+        }
+
+        .text {
+            color: @dark-text + 30%;
+
+            @media(max-width: 768px) {
+                text-align: center;
+            }
+        }
+
+    }
 }
 
 .yilai-snow{
