--- a/app/includes/content_yilai-lotus.html
+++ b/app/includes/content_yilai-lotus.html
@@ -29,6 +29,19 @@
                 <img src="../img/lotus_05.jpg" alt=""></div>
         </section>
 
+        <section class="row pendant_content_3">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="padding: 0">
+                <div class="text">
+                    <h2>Качественные материалы</h2>
+                    <p>Благодаря качественному PMMA пластику используемому в рассеивающей пластине и абажуре, свет распространяется равномерно, и светильник абсолютно безопасен для использования в любых помещениях — его можно вешать в спальнях, учебных комнатах, столовых, гостиницах.</p>
+
+                    <p>Лампы Yilai Lotus доступны в двух вариантах формы — круглая и прямоугольная. Это позволяет вписать их практически в любой интерьер. Выберети подходящуюю исходя из требуемой площади освещения и дизайна помещения.</p>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
+                    src="../img/lotus_06.jpg" alt=""></div>
+        </section>
+
         <section class="row yilai-lotus_content_8">
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0">
                 <div class="text">
@@ -55,6 +68,15 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="padding: 0; font-size: 0;"><img
                     src="../img/nox_09.jpg" alt=""></div>
+        </section>
+
+        <section class="row yilai-lotus_content_9">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
+                <div class="text">
+                    <h2>Широкий диапазон настройки яркости и&nbsp;температуры</h2>
+                    <p>Чтобы подобрать оптимальное освещение для работы или отдыха, температуру света потолочного светильника Yeelight Lotus можно настраивать по своему желанию. Так же просто можно настроить и яркость до комфортного уровня.</p>
+                </div>
+            </div>
         </section>
 
         <section class="row yilai-lotus_content_7">
