--- a/app/includes/slider.html
+++ b/app/includes/slider.html
@@ -1,6 +1,13 @@
 <section class="row slider">
     <div id="left" class="arrow"></div>
     <div class="col-lg-12 slider-wrap" style="padding: 0">
+        <div class="slide slide_4 row" style="margin: 0; display: none">
+            <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 slide-text">
+                <h1>Умная настольная лампа</h1>
+                <h2>Свет — начало для творчества</h2>
+                <a href="/desk/" class="button">Подробнее</a>
+            </div>
+        </div>
         <div class="slide slide_3 row" style="margin: 0; display: none">
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 slide-text">
                 <h1>Светодиодный потолочный светильник</h1>
@@ -16,10 +23,10 @@
             </div>
         </div>
         <div class="slide slide_1 row" style="margin: 0">
-            <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 slide-text">
-                <h1>Умная настольная лампа</h1>
-                <h2>Свет — начало для творчества</h2>
-                <a href="/desk/" class="button">Подробнее</a>
+            <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-1 col-lg-5 col-lg-offset-1 slide-text">
+                <h1>Привет, Алиса!</h1>
+                <h2>Теперь вы можете управлять светом Yeelight c&nbsp;помощью ЯндексАлисы</h2>
+                <a href="https://yandex.ru/alice/smart-home" class="button">Подробнее</a>
             </div>
         </div>
     </div>
