--- a/app/includes/footer.html
+++ b/app/includes/footer.html
@@ -1,5 +1,19 @@
 <footer class="row">
-        <div class="col-xs-6 col-sm-4 col-md-3 col-md-offset-1 col-lg-2 col-lg-offset-2">
+        <div class="col-xs-12 col-sm-3 col-md-4 col-md-offset-1 col-lg-3 col-lg-offset-2">
+                <h4>Поставщик в&nbsp;РБ</h4>
+                <p>Официальный поставщик продуктов YeeLight в&nbsp;Беларусь <a href="https://cd-life.by/">группа
+                                компаний CD-LIFE</a></p>
+                <p>Минск, Боровляны, ул. 40 лет Победы&nbsp;27/1</p>
+                <p>тел.: +375 (17) 500-10-00</p>
+                <p>email: sale@cd-life.by</p>
+        </div>
+        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+                <h4>YeeLight&nbsp;в&nbsp;Минске</h4>
+                <a href="/shops/">Официальные дилеры в&nbsp;Минске</a>
+                <br>
+                <a href="http://pravsha.by/">Сервисный центр «Правша»</a>
+        </div>
+        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
                 <h4>Продукты</h4>
                 <a href="/luna/">LED Ceiling Light</a>
                 <br>
@@ -13,15 +27,7 @@
                 <br>
                 <a href="/table-led-light/">LED Table Lamp</a>
         </div>
-        <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
-                <h4>YeeLight в Минске</h4>
-                <a href="/shops/">Дилеры в Минске</a>
-                <br>
-                <a href="http://cd-life.by/">Дистрибьютор в Беларуси</a>
-                <br>
-                <a href="http://pravsha.by/">Сервисный центр «Правша»</a>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2">
+        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
                 <h4>Информация</h4>
                 <a href="http://forum.yeelight.com/">Форум (en)</a>
                 <br>
@@ -30,6 +36,6 @@
 </footer>
 <div class="row copyright">
         <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-                <p>© 2012-2018 YeeLight</p>
+                <p>© Группа компаний CD-LIFE, 2017—2020</p>
         </div>
 </div>
