--- a/app/includes/shops.html
+++ b/app/includes/shops.html
@@ -3,9 +3,11 @@
         <section class="row shops">
             <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
                 <h1>Купить продукты YeeLight в&nbsp;Беларуси</h1>
-                <p>При покупке продукции YeeLight у официальных дилеров, вы получаете 100% оригинальный продукт
+                <p>Официальный поставщик продуктов YeeLight в Беларусь, <a href="https://cd-life.by/">группа компаний
+                        CD-LIFE</a>. При покупке продукции
+                    YeeLight у официальных дилеров, вы получаете 100% оригинальный продукт
                     с&nbsp;официальной
-                    гарантией от поставщика</p>
+                    гарантией от поставщика.</p>
                 <div class="row">
                     <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo"
@@ -28,7 +30,7 @@
                             <a href="#" class="show-location" id="xistore">на карте</a>
                         </div>
                     </div>
-                    <div class="col-xs-6 col-sm-4 col-lg-2">
+                    <!-- <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="https://www.mile-diy.by/hypermarkets/minsk/">
                             <img src="../img/logo-mile(185x80).png" alt="">
                         </a>
@@ -36,7 +38,7 @@
                             <img src="../img/locate-places-on-maps.svg" alt="">
                             <a href="#" class="show-location" id="mile">на карте</a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="https://flamingo.by/lamps/&brand=Xiaomi&init=1">
                             <img src="../img/logo-flamingo(185x80).png" alt="">
@@ -46,7 +48,7 @@
                             <a href="#" class="show-location" id="flamingo">на карте</a>
                         </div>
                     </div>
-                    <div class="col-xs-6 col-sm-4 col-lg-2">
+                    <!-- <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="http://diy.by/">
                             <img src="../img/logo-materik(185x80).png" alt="">
                         </a>
@@ -54,7 +56,7 @@
                             <img src="../img/locate-places-on-maps.svg" alt="">
                             <a href="#" class="show-location" id="materik">на карте</a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-xs-6 col-sm-4 col-lg-2">
                         <a class="shop-logo" href="https://www.21vek.by/lamps/all/yeelight/">
                             <img src="../img/logo-21vek(185x80).png" alt="">
