--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -70,6 +70,9 @@
                             <li class="sub-menu-item">
                                 <a href="/muse/">Serene&nbsp;Eye-Friendly</a>
                             </li>
+                            <li class="sub-menu-item">
+                                <a href="/wireless-charge-nightlight/">Wireless&nbsp;Charge&nbsp;Nightlight</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="menu-item">
@@ -144,6 +147,9 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/muse/">Serene&nbsp;Eye-Friendly</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/wireless-charge-nightlight/">Wireless&nbsp;Charge&nbsp;Nightlight</a>
                             </li>
                         </ul>
                     </li>
