--- a/app/includes/products.html
+++ b/app/includes/products.html
@@ -7,7 +7,7 @@
     <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1 col-lg-4 col-lg-offset-2">
         <a href="/luna/" class="product">
             <img src="img/luna_thumbnail.jpg" alt="">
-            <p>LED Ceiling Light — Светодиодный потолочный светильник</p>
+            <p>LED Ceiling Light — Потолочный светильник</p>
         </a>
         <a href="/candela/" class="product">
             <img src="img/candella_thumbnail.jpg" alt="">
@@ -37,15 +37,23 @@
             <img src="img/lotus-round_thumbnail.jpg" alt="">
             <p>Yilai Lotus Ceiling Light</p>
         </a>
+        <a href="/yilai-snow/" class="product">
+            <img src="img/snow_thumbnail.jpg" alt="">
+            <p>Yilai Snow Ceiling Light</p>
+        </a>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-        <a href="/desk/" class="product">
-            <img src="img/desktop_thumbnail.jpg" alt="">
-            <p>LED Smart Table Lamp — Умная настольная лампа</p>
+        <a href="/wireless-charge-nightlight/" class="product">
+            <img src="img/wireless-charge_thumbnail.jpg" alt="">
+            <p>Wireless Charge Nightlight — ночник-зарядка</p>
         </a>
         <a href="/galaxy/" class="product">
             <img src="img/luna_650_thumbnail.jpg" alt="">
-            <p>LED Ceiling Light Galaxy — Светодиодный потолочный светильник</p>
+            <p>LED Ceiling Light Galaxy — Потолочный светильник</p>
+        </a>
+        <a href="/desk/" class="product">
+            <img src="img/desktop_thumbnail.jpg" alt="">
+            <p>LED Smart Table Lamp — Умная настольная лампа</p>
         </a>
         <a href="/beside/" class="product">
             <img src="img/beside_thumbnail.jpg" alt="">
@@ -70,9 +78,5 @@
         <a href="/pendant/" class="product">
             <img src="img/pendant_thumbnail.jpg" alt="">
             <p>Pendant Light — Подвесной светильник</p>
-        </a>
-        <a href="/yilai-snow/" class="product">
-            <img src="img/snow_thumbnail.jpg" alt="">
-            <p>Yilai Snow Ceiling Light</p>
         </a>
 </section>
