--- a/app/includes/products.html
+++ b/app/includes/products.html
@@ -5,6 +5,10 @@
         </div>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1 col-lg-4 col-lg-offset-2">
+        <a href="/mirror/" class="product">
+            <img src="img/mirror_thumbnail.jpg" alt="">
+            <p>Sensor Makeup Mirror — зеркало с подсветкой</p>
+        </a>
         <a href="/luna/" class="product">
             <img src="img/luna_thumbnail.jpg" alt="">
             <p>LED Ceiling Light — Потолочный светильник</p>
