--- a/app/less/main.less
+++ b/app/less/main.less
@@ -248,6 +248,12 @@ header {
             padding: 100px 0;
         }
 
+        &_5 {
+            background: url('../img/banner_mirror.jpg') no-repeat center center;
+            background-size: cover;
+            color: @dark-text + 30%;
+        }
+
         &_4 {
             background: url('../img/banner_desktop.jpg') no-repeat center center;
             background-size: cover;
@@ -319,6 +325,7 @@ header {
 }
 
 @import "import/_wireless-charge.less";
+@import "import/_mirror.less";
 
 .candela {
     margin-top: 80px;
