--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -73,6 +73,9 @@
                             <li class="sub-menu-item">
                                 <a href="/wireless-charge-nightlight/">Wireless&nbsp;Charge&nbsp;Nightlight</a>
                             </li>
+                            <li class="sub-menu-item">
+                                <a href="/mirror/">Sensor&nbsp;Makeup&nbsp;Mirror</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="menu-item">
@@ -150,6 +153,9 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/wireless-charge-nightlight/">Wireless&nbsp;Charge&nbsp;Nightlight</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/mirror/">Sensor&nbsp;Makeup&nbsp;Mirror</a>
                             </li>
                         </ul>
                     </li>
