--- a/app/includes/slider.html
+++ b/app/includes/slider.html
@@ -22,6 +22,13 @@
                 <a href="/candela/" class="button">Подробнее</a>
             </div>
         </div>
+        <div class="slide slide_5 row" style="margin: 0; display: none">
+            <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 slide-text">
+                <h1>Зеркало с подсветкой</h1>
+                <h2>Свет для создания идеального макияжа</h2>
+                <a href="/mirror/" class="button">Подробнее</a>
+            </div>
+        </div>
         <div class="slide slide_1 row" style="margin: 0">
             <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-1 col-lg-5 col-lg-offset-1 slide-text">
                 <h1>Привет, Алиса!</h1>
