--- a/app/includes/products.html
+++ b/app/includes/products.html
@@ -9,6 +9,10 @@
             <img src="img/mirror_thumbnail.jpg" alt="">
             <p>Sensor Makeup Mirror — зеркало с подсветкой</p>
         </a>
+        <a href="/folding/" class="product">
+            <img src="img/folding_thumbnail.jpg" alt="">
+            <p>Folding Desk Lamp — складная настольная лампа</p>
+        </a>
         <a href="/luna/" class="product">
             <img src="img/luna_thumbnail.jpg" alt="">
             <p>LED Ceiling Light — Потолочный светильник</p>
@@ -40,10 +44,6 @@
         <a href="/yilai-lotus/" class="product">
             <img src="img/lotus-round_thumbnail.jpg" alt="">
             <p>Yilai Lotus Ceiling Light</p>
-        </a>
-        <a href="/yilai-snow/" class="product">
-            <img src="img/snow_thumbnail.jpg" alt="">
-            <p>Yilai Snow Ceiling Light</p>
         </a>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
@@ -82,5 +82,9 @@
         <a href="/pendant/" class="product">
             <img src="img/pendant_thumbnail.jpg" alt="">
             <p>Pendant Light — Подвесной светильник</p>
+        </a>
+        <a href="/yilai-snow/" class="product">
+            <img src="img/snow_thumbnail.jpg" alt="">
+            <p>Yilai Snow Ceiling Light</p>
         </a>
 </section>
