--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -56,6 +56,9 @@
                             <li class="sub-menu-item">
                                 <a href="/motion-sensor-nightlight/">Motion&nbsp;Sensor&nbsp;Night&nbsp;Lights</a>
                             </li>
+                            <li class="sub-menu-item">
+                                <a href="/wireless-charge-nightlight/">Wireless&nbsp;Charge&nbsp;Nightlight</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="menu-item">
@@ -71,10 +74,10 @@
                                 <a href="/muse/">Serene&nbsp;Eye-Friendly</a>
                             </li>
                             <li class="sub-menu-item">
-                                <a href="/wireless-charge-nightlight/">Wireless&nbsp;Charge&nbsp;Nightlight</a>
+                                <a href="/mirror/">Sensor&nbsp;Makeup&nbsp;Mirror</a>
                             </li>
                             <li class="sub-menu-item">
-                                <a href="/mirror/">Sensor&nbsp;Makeup&nbsp;Mirror</a>
+                                <a href="/folding/">Folding&nbsp;Desk&nbsp;Lamp</a>
                             </li>
                         </ul>
                     </li>
@@ -137,6 +140,9 @@
                             <li class="sub-menu-item">
                                 <a href="/motion-sensor-nightlight/">Motion&nbsp;Sensor&nbsp;Night&nbsp;Lights</a>
                             </li>
+                            <li class="sub-menu-item">
+                                <a href="/wireless-charge-nightlight/">Wireless&nbsp;Charge&nbsp;Nightlight</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="menu-item">
@@ -156,6 +162,9 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/mirror/">Sensor&nbsp;Makeup&nbsp;Mirror</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/folding/">Folding&nbsp;Desk&nbsp;Lamp</a>
                             </li>
                         </ul>
                     </li>
