--- a/app/less/main.less
+++ b/app/less/main.less
@@ -21,6 +21,7 @@ body {
 h1 {
     margin-bottom: 20px;
     font-size: 400%;
+    line-height: 1.1;
 
     @media(max-width: 768px) {
         margin-bottom: 10px;
@@ -326,6 +327,7 @@ header {
 
 @import "import/_wireless-charge.less";
 @import "import/_mirror.less";
+@import "import/_folding.less";
 
 .candela {
     margin-top: 80px;
