--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -79,6 +79,9 @@
                             <li class="sub-menu-item">
                                 <a href="/folding/">Folding&nbsp;Desk&nbsp;Lamp</a>
                             </li>
+                            <li class="sub-menu-item">
+                                <a href="/clamp/">Desk&nbsp;Clamp&nbsp;Lamp&nbsp;J1</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="menu-item">
@@ -165,6 +168,9 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/folding/">Folding&nbsp;Desk&nbsp;Lamp</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/clamp/">Desk&nbsp;Clamp&nbsp;Lamp&nbsp;J1</a>
                             </li>
                         </ul>
                     </li>
