--- a/app/includes/products.html
+++ b/app/includes/products.html
@@ -51,6 +51,10 @@
             <img src="img/wireless-charge_thumbnail.jpg" alt="">
             <p>Wireless Charge Nightlight — ночник-зарядка</p>
         </a>
+        <a href="/clamp/" class="product">
+            <img src="img/clamp_thumbnail.jpg" alt="">
+            <p>Desk Clamp Lamp J1 — лампа с зажимом</p>
+        </a>
         <a href="/galaxy/" class="product">
             <img src="img/luna_650_thumbnail.jpg" alt="">
             <p>LED Ceiling Light Galaxy — Потолочный светильник</p>
