--- a/app/less/main.less
+++ b/app/less/main.less
@@ -328,6 +328,7 @@ header {
 @import "import/_wireless-charge.less";
 @import "import/_mirror.less";
 @import "import/_folding.less";
+@import "import/_clamp.less";
 
 .candela {
     margin-top: 80px;
