--- a/app/less/main.less
+++ b/app/less/main.less
@@ -151,24 +151,47 @@ header {
         }
 
         &.mobile {
+            height: 100vh;
+
             .menu {
                 text-align: left;
                 margin: 20px 0 0 10px;
 
                 .menu-item {
-                    >a {
-                        display: block;
-                        margin: 10px 0;
-                        color: @yeelight-color;
-                        font-family: "HelveticaNeueCyr-Light";
-                        font-size: 180%;
-                        letter-spacing: 0.08em; //text-transform: uppercase;
-                        text-decoration: none;
-                        font-weight: bold;
+                    margin-bottom: 15px;
 
-                        &:hover {
+                    &__inner {
+                        margin-bottom: 10px;
+
+                        >a {
+                            margin: 10px 0;
                             color: @yeelight-color;
+                            font-family: "HelveticaNeueCyr-Light";
+                            font-size: 140%;
+                            letter-spacing: 0.08em; //text-transform: uppercase;
                             text-decoration: none;
+                            font-weight: bold;
+
+                            &:hover {
+                                color: @yeelight-color;
+                                text-decoration: none;
+                            }
+                        }
+
+                        >span {
+                            content: '';
+                            display: inline-block;
+                            width: 10px;
+                            height: 10px;
+                            border-left: 1px solid @yeelight-color;
+                            border-top: 1px solid @yeelight-color;
+                            transform: rotate(135deg) translate(-20%, -30%);
+                            transition: transform .5s;
+                        }
+
+                        .arrow-down {
+                            transform: rotate(225deg) translate(-20%, 60%);
+
                         }
                     }
                 }
@@ -182,7 +205,7 @@ header {
                         display: inline-block;
                         margin: 3px 0;
                         color: @dark-text + 30%;
-                        font-size: 180%;
+                        font-size: 140%;
                         line-height: 1.3;
                         letter-spacing: 0.1em;
                         text-decoration: none;
