--- a/app/includes/header.html
+++ b/app/includes/header.html
@@ -89,6 +89,9 @@
                                 <a href="/folding/">Folding&nbsp;Desk&nbsp;Lamp</a>
                             </li>
                             <li class="sub-menu-item">
+                                <a href="/folding-z1-pro/">Folding&nbsp;Lamp&nbsp;Z1&nbsp;Pro</a>
+                            </li>
+                            <li class="sub-menu-item">
                                 <a href="/clamp/">Desk&nbsp;Clamp&nbsp;Lamp&nbsp;J1</a>
                             </li>
                         </ul>
@@ -185,6 +188,9 @@
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/folding/">Folding&nbsp;Desk&nbsp;Lamp</a>
+                            </li>
+                            <li class="sub-menu-item">
+                                <a href="/folding-z1-pro/">Folding&nbsp;Lamp&nbsp;Z1&nbsp;Pro</a>
                             </li>
                             <li class="sub-menu-item">
                                 <a href="/clamp/">Desk&nbsp;Clamp&nbsp;Lamp&nbsp;J1</a>
