--- a/app/includes/products.html
+++ b/app/includes/products.html
@@ -13,6 +13,10 @@
             <img src="img/folding_thumbnail.jpg" alt="">
             <p>Folding Desk Lamp — складная настольная лампа</p>
         </a>
+        <a href="/folding-z1-pro/" class="product">
+            <img src="img/z1_thumbnail.jpg" alt="">
+            <p>Folding Z1 Pro — настольная лампа</p>
+        </a>
         <a href="/luna/" class="product">
             <img src="img/luna_thumbnail.jpg" alt="">
             <p>LED Ceiling Light — Потолочный светильник</p>
