--- a/app/less/main.less
+++ b/app/less/main.less
@@ -351,6 +351,7 @@ header {
 @import "import/_wireless-charge.less";
 @import "import/_mirror.less";
 @import "import/_folding.less";
+@import "import/_folding-z1.less";
 @import "import/_clamp.less";
 
 .candela {
