--- a/app/includes/content_candela.html
+++ b/app/includes/content_candela.html
@@ -5,7 +5,8 @@
                 <div class="text">
                     <h1>Yeelight Candela</h1>
                     <h2>Зажги свечу одним поворотом</h2>
-                    <p>Элегантный и современный дизайн | Плавный переход яркости | Перезаряжаемый и портативный | Совместное
+                    <p>Элегантный и современный дизайн | Плавный переход яркости | Перезаряжаемый и портативный |
+                        Совместное
                         управление
                     </p>
                 </div>
@@ -21,8 +22,10 @@
             <div class="col-sm-6 col-md-6 col-lg-6">
                 <div class="text">
                     <h2>Креативное оформление для произведения искусства</h2>
-                    <p>Окончательный дизайн Candela это результат четырехмесячного сотрудничества с многонациональными проектно-конструкторскими
-                        группами. Тысячи эскизов были созданы и переработаны, чтобы найти идеальное сочетание света, эстетики
+                    <p>Окончательный дизайн Candela это результат четырехмесячного сотрудничества с многонациональными
+                        проектно-конструкторскими
+                        группами. Тысячи эскизов были созданы и переработаны, чтобы найти идеальное сочетание света,
+                        эстетики
                         и технологии.</p>
                 </div>
             </div>
@@ -31,7 +34,8 @@
             <div class="col-sm-6 col-md-6 col-lg-6">
                 <div class="text">
                     <h2>Новый дизайн с плавной регулировкой яркости</h2>
-                    <p>В лампу установлен тихий редуктор. Мы тщательно проверяем каждую шестеренку, чтобы гарантировать отличное
+                    <p>В лампу установлен тихий редуктор. Мы тщательно проверяем каждую шестеренку, чтобы гарантировать
+                        отличное
                         сцепление. Это обеспечивает очень плавный переход при регулировке яркости.
                     </p>
                 </div>
@@ -41,8 +45,10 @@
             <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 align-center">
                 <div class="text">
                     <h2>Управляйте оркестром свечей</h2>
-                    <p>Благодаря технологии BLE Mesh, лампы Candela могут взаимодействовать друг с другом, позволяя одновременно
-                        контролировать до 30 000 ламп. Просто поверните любую лампу Candela и наблюдайте, как оживают остальные,
+                    <p>Благодаря технологии BLE Mesh, лампы Candela могут взаимодействовать друг с другом, позволяя
+                        одновременно
+                        контролировать до 30 000 ламп. Просто поверните любую лампу Candela и наблюдайте, как оживают
+                        остальные,
                         ориентируясь на яркость той лампы, которую вы контролируете.
                     </p>
                 </div>
@@ -53,8 +59,10 @@
             <div class="col-sm-6 col-md-6 col-lg-6">
                 <div class="text">
                     <h2>Теплый свет свечи для ощущения теплоты в вашем сердце</h2>
-                    <p>Candela имеет цветовую температуру 1600K, такую же что и настоящие свечи. Имеет регулируемую яркость,
-                        что позволяет вам имитировать приятное теплое свечение свечи, но без пламени. Разработанная с учетом
+                    <p>Candela имеет цветовую температуру 1600K, такую же что и настоящие свечи. Имеет регулируемую
+                        яркость,
+                        что позволяет вам имитировать приятное теплое свечение свечи, но без пламени. Разработанная с
+                        учетом
                         влияния на зрение, Candela производит минимум синего света.</p>
                 </div>
             </div>
@@ -69,7 +77,8 @@
             <div class="col-sm-6 col-md-6 col-lg-6">
                 <div class="text">
                     <h2>Встроенная перезаряжаемая батарея c длительным сроком жизни</h2>
-                    <p>Встроенная батарея 2100 мАч позволяет непрерывно использовать лампу до 8 часов за одну зарядку. Эта портативность
+                    <p>Встроенная батарея 2100 мАч позволяет непрерывно использовать лампу до 8 часов за одну зарядку.
+                        Эта портативность
                         позволяет лампе Candela быть частью любого момента в вашей жизни, где бы ни не находились.</p>
                 </div>
             </div>
@@ -78,9 +87,12 @@
             <div class="col-sm-6 col-md-6 col-lg-6">
                 <div class="text">
                     <h2>Ваш телефон это пульт управления лампой</h2>
-                    <p>Осуществляйте управление вашей лампой Candela через приложение Yeelight. С помощью приложения вы можете
-                        не только управлять одной лампой Candela, но и одновременно управлять несколькими лампами. Фактически,
-                        вы можете объединить определенные лампы в одну группу и запрограммировать их таким образом, чтобы
+                    <p>Осуществляйте управление вашей лампой Candela через приложение Yeelight. С помощью приложения вы
+                        можете
+                        не только управлять одной лампой Candela, но и одновременно управлять несколькими лампами.
+                        Фактически,
+                        вы можете объединить определенные лампы в одну группу и запрограммировать их таким образом,
+                        чтобы
                         создавать из света различные красивые композиции.</p>
                 </div>
             </div>
@@ -92,8 +104,10 @@
             <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
                 <div class="text">
                     <h2>Отличный дизайн</h2>
-                    <p>Стекло лампы выглядит естественно и очень прозрачно благодаря качественному поликарбонату, это позволяет
-                        свету рассеиваться красиво и равномерно. Candela сочетает в себе стиль и самые современные технологии.</p>
+                    <p>Стекло лампы выглядит естественно и очень прозрачно благодаря качественному поликарбонату, это
+                        позволяет
+                        свету рассеиваться красиво и равномерно. Candela сочетает в себе стиль и самые современные
+                        технологии.</p>
                 </div>
                 <img src="../img/candela_8.jpg" alt="">
             </div>
@@ -102,9 +116,12 @@
             <div class="col-sm-6 col-md-6 col-lg-6">
                 <div class="text">
                     <h2>Изящно скрытое управление, для еще большей эстетики</h2>
-                    <p>Лампа, задуманая как технически сложное произведение искусства, скрывает все элементы управления и порт
-                        зарядки так, чтобы не отвлекать от элегантной эстетики и в то же время защищать от поломок. Скрытая
-                        нижняя часть лампы Candela включает в себя три настройки управления, чтобы легко включать/выключать
+                    <p>Лампа, задуманая как технически сложное произведение искусства, скрывает все элементы управления
+                        и порт
+                        зарядки так, чтобы не отвлекать от элегантной эстетики и в то же время защищать от поломок.
+                        Скрытая
+                        нижняя часть лампы Candela включает в себя три настройки управления, чтобы легко
+                        включать/выключать
                         или подключаться к Bluetooth, и двухцветный индикатор для отображения состояния зарядки.</p>
                 </div>
             </div>
@@ -171,6 +188,7 @@
 </div>
 <section class="overlay" style="display: none">
     <div class="overlay-content">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ya8IWnmTSss?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/IPGkAgwu78s" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </section>
